# msg_interface

./: .gitignore  ContainerConfig.yaml  Dockerfile  MultiportTcpListener.py  README.md  SkaiMessages.py  TcpMessageSync.py  TcpSender.py  attach.sh  deleteRebuildRestart.sh  docker-compose.yaml  init_remotes.sh  manage.py  pom.xml  push_all.sh  push_all_remotes.sh  remove.sh
TCP/: MultiportTcpListener.py  SkaiMessages.py  TcpSender.hpp  TcpSender.py  build_protobuf_msgs.sh
TCP/old/: SkaiMessages.py
TCP/protobuf_messages/: FeetPosMsgType.proto  FeetPosProtoMsg.proto  PoseMsg.proto  PoseProtoMsg.proto  SkaiMsgType.proto  SkaimotMsg.proto  SkaimotProtoMsg.proto  build_protobuf_msgs.sh
package/: build_protobuf_msgs.sh  install_skaimsginterface.sh  setup.py  test_package.py
package/examples/: README.md  example_listener.py  example_listener_mp.py  example_tcp_listener.py  listener.py  (+18 more)
package/skaimsginterface/: CMakeLists.txt  __init__.py  build_skaimsginterface_cpp.sh
package/skaimsginterface/database/: SkaiDatabaseInterface.py
package/skaimsginterface/protobuf/: SkaimotProtoMsg.proto  __init__.py  generatedpy__init__.py
package/skaimsginterface/replay/: FileRecorder.py  ReplayModule.py  __init__.py
package/skaimsginterface/skaimessages/: CMakeLists.txt  SkaiMessages.cpp  SkaiMessages.py  __init__.py
package/skaimsginterface/tcp/: MultiportTcpListener.py  MultiportTcpListenerMP.py  SkaiMessages.py  TcpSender.py  TcpSenderMP.py  __init__.py
package/skaimsginterface/udp/: MultiportUdpListener.py  UdpSender.py  __init__.py
skaimsginterface/: setup.py
(+25 files in other folders)
